Section 5/s5-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: front-end
    app: front-end
  name: front-end
  namespace: sock-shop
  selfLink: /api/v1/namespaces/sock-shop/services/front-end
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: 8079
    name: http
  - nodePort: 30002
    port: 443
    protocol: TCP
    targetPort: 8079
    name: https
  selector:
    name: front-end
  sessionAffinity: None
  type: NodePort
